# hofft

./: .gitignore  README.md  pyproject.toml
src/hofft/: __init__.py  als.py  apod_init.py  apply.py  kb.py  kernel_models.py  model.py  pipelines.py  sgd.py
tests/: 3d.py  als_hofft.py  als_kernels.py  coco_b0.py  coco_nav.py  coco_phantom.py  high_order_sweep.py  kb_disect.py  lin_phase_sweep.py  plot_times.py  show_experiment.py  toy_hop.py  verify_sigpy.py
